name-parser-antlr/gen/org/gbif/nameparser/antlr/SciNameParser.java
// Generated from /Users/markus/code/name-parser/name-parser-antlr/src/main/resources/antlr/SciName.g4 by ANTLR 4.7
package org.gbif.nameparser.antlr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SciNameParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NOTHO=1, RANK=2, ETAL=3, MONOMIAL=4, EPITHET=5, AUTHOR_INITIALS=6, AUTHOR=7, 
		AUTHOR2=8, AUTHOR_DELIM=9, YEAR=10, DOT=11, LR_BRACKET=12, RR_BRACKET=13, 
		COMMA=14, SEMI=15, SINGLE_QUOTE=16, DOUBLE_QUOTE=17, COLON=18, HYBRID_MARKER=19, 
		EXTINCT_MARKER=20, OTU_BOLD=21, OTU_SH=22, VIRUS=23, CONTROL=24, NUC=25, 
		NLC=26, AUC=27, ALC=28, ALPH=29;
	public static final int
		RULE_epithet2 = 0, RULE_author = 1, RULE_dot = 2, RULE_auc = 3, RULE_alc = 4, 
		RULE_nuc = 5, RULE_nlc = 6, RULE_alphanum = 7, RULE_scientificName = 8, 
		RULE_latin = 9, RULE_monomial = 10, RULE_epithet = 11, RULE_species = 12, 
		RULE_rank = 13, RULE_subspecies = 14, RULE_infraspecies = 15, RULE_authorship = 16, 
		RULE_combauthorship = 17, RULE_basauthorship = 18, RULE_authorteam = 19, 
		RULE_virus = 20, RULE_otu = 21, RULE_hybridformula = 22;
	public static final String[] ruleNames = {
		"epithet2", "author", "dot", "auc", "alc", "nuc", "nlc", "alphanum", "scientificName", 
		"latin", "monomial", "epithet", "species", "rank", "subspecies", "infraspecies", 
		"authorship", "combauthorship", "basauthorship", "authorteam", "virus", 
		"otu", "hybridformula"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'notho'", null, null, null, null, null, null, null, null, null, 
		"'.'", "'('", "')'", "','", "';'", "'''", "'\"'", "':'", null, "'\u2020'", 
		null, null, "'virus'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NOTHO", "RANK", "ETAL", "MONOMIAL", "EPITHET", "AUTHOR_INITIALS", 
		"AUTHOR", "AUTHOR2", "AUTHOR_DELIM", "YEAR", "DOT", "LR_BRACKET", "RR_BRACKET", 
		"COMMA", "SEMI", "SINGLE_QUOTE", "DOUBLE_QUOTE", "COLON", "HYBRID_MARKER", 
		"EXTINCT_MARKER", "OTU_BOLD", "OTU_SH", "VIRUS", "CONTROL", "NUC", "NLC", 
		"AUC", "ALC", "ALPH"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SciName.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SciNameParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Epithet2Context extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SciNameParser.EOF, 0); }
		public List<TerminalNode> EPITHET() { return getTokens(SciNameParser.EPITHET); }
		public TerminalNode EPITHET(int i) {
			return getToken(SciNameParser.EPITHET, i);
		}
		public List<TerminalNode> HYBRID_MARKER() { return getTokens(SciNameParser.HYBRID_MARKER); }
		public TerminalNode HYBRID_MARKER(int i) {
			return getToken(SciNameParser.HYBRID_MARKER, i);
		}
		public Epithet2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_epithet2; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitEpithet2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Epithet2Context epithet2() throws RecognitionException {
		Epithet2Context _localctx = new Epithet2Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_epithet2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==HYBRID_MARKER) {
					{
					setState(46);
					match(HYBRID_MARKER);
					}
				}

				setState(49);
				match(EPITHET);
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EPITHET || _la==HYBRID_MARKER );
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AuthorContext extends ParserRuleContext {
		public TerminalNode AUTHOR() { return getToken(SciNameParser.AUTHOR, 0); }
		public TerminalNode EOF() { return getToken(SciNameParser.EOF, 0); }
		public AuthorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_author; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitAuthor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AuthorContext author() throws RecognitionException {
		AuthorContext _localctx = new AuthorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_author);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(AUTHOR);
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DotContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SciNameParser.EOF, 0); }
		public List<TerminalNode> DOT() { return getTokens(SciNameParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(SciNameParser.DOT, i);
		}
		public DotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dot; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitDot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DotContext dot() throws RecognitionException {
		DotContext _localctx = new DotContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dot);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				match(DOT);
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DOT );
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AucContext extends ParserRuleContext {
		public TerminalNode AUC() { return getToken(SciNameParser.AUC, 0); }
		public TerminalNode EOF() { return getToken(SciNameParser.EOF, 0); }
		public AucContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_auc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitAuc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AucContext auc() throws RecognitionException {
		AucContext _localctx = new AucContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_auc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(AUC);
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlcContext extends ParserRuleContext {
		public TerminalNode ALC() { return getToken(SciNameParser.ALC, 0); }
		public TerminalNode EOF() { return getToken(SciNameParser.EOF, 0); }
		public AlcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitAlc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlcContext alc() throws RecognitionException {
		AlcContext _localctx = new AlcContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_alc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(ALC);
			setState(70);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NucContext extends ParserRuleContext {
		public TerminalNode NUC() { return getToken(SciNameParser.NUC, 0); }
		public TerminalNode EOF() { return getToken(SciNameParser.EOF, 0); }
		public NucContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nuc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitNuc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NucContext nuc() throws RecognitionException {
		NucContext _localctx = new NucContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nuc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(NUC);
			setState(73);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NlcContext extends ParserRuleContext {
		public TerminalNode NLC() { return getToken(SciNameParser.NLC, 0); }
		public TerminalNode EOF() { return getToken(SciNameParser.EOF, 0); }
		public NlcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nlc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitNlc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NlcContext nlc() throws RecognitionException {
		NlcContext _localctx = new NlcContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nlc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(NLC);
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlphanumContext extends ParserRuleContext {
		public TerminalNode ALPH() { return getToken(SciNameParser.ALPH, 0); }
		public TerminalNode EOF() { return getToken(SciNameParser.EOF, 0); }
		public AlphanumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alphanum; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitAlphanum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlphanumContext alphanum() throws RecognitionException {
		AlphanumContext _localctx = new AlphanumContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_alphanum);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(ALPH);
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScientificNameContext extends ParserRuleContext {
		public OtuContext otu() {
			return getRuleContext(OtuContext.class,0);
		}
		public LatinContext latin() {
			return getRuleContext(LatinContext.class,0);
		}
		public VirusContext virus() {
			return getRuleContext(VirusContext.class,0);
		}
		public HybridformulaContext hybridformula() {
			return getRuleContext(HybridformulaContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SciNameParser.EOF, 0); }
		public ScientificNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scientificName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitScientificName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScientificNameContext scientificName() throws RecognitionException {
		ScientificNameContext _localctx = new ScientificNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_scientificName);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				otu();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				latin();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				virus();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				hybridformula();
				setState(85);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LatinContext extends ParserRuleContext {
		public MonomialContext monomial() {
			return getRuleContext(MonomialContext.class,0);
		}
		public SpeciesContext species() {
			return getRuleContext(SpeciesContext.class,0);
		}
		public InfraspeciesContext infraspecies() {
			return getRuleContext(InfraspeciesContext.class,0);
		}
		public SubspeciesContext subspecies() {
			return getRuleContext(SubspeciesContext.class,0);
		}
		public LatinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_latin; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitLatin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LatinContext latin() throws RecognitionException {
		LatinContext _localctx = new LatinContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_latin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			monomial();
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(90);
				species();
				setState(95);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(92);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(91);
						subspecies();
						}
						break;
					}
					setState(94);
					infraspecies();
					}
					break;
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MonomialContext extends ParserRuleContext {
		public TerminalNode MONOMIAL() { return getToken(SciNameParser.MONOMIAL, 0); }
		public AuthorshipContext authorship() {
			return getRuleContext(AuthorshipContext.class,0);
		}
		public TerminalNode HYBRID_MARKER() { return getToken(SciNameParser.HYBRID_MARKER, 0); }
		public MonomialContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_monomial; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitMonomial(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MonomialContext monomial() throws RecognitionException {
		MonomialContext _localctx = new MonomialContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_monomial);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HYBRID_MARKER) {
				{
				setState(99);
				match(HYBRID_MARKER);
				}
			}

			setState(102);
			match(MONOMIAL);
			setState(103);
			authorship();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EpithetContext extends ParserRuleContext {
		public TerminalNode EPITHET() { return getToken(SciNameParser.EPITHET, 0); }
		public AuthorshipContext authorship() {
			return getRuleContext(AuthorshipContext.class,0);
		}
		public TerminalNode HYBRID_MARKER() { return getToken(SciNameParser.HYBRID_MARKER, 0); }
		public EpithetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_epithet; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitEpithet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EpithetContext epithet() throws RecognitionException {
		EpithetContext _localctx = new EpithetContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_epithet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HYBRID_MARKER) {
				{
				setState(105);
				match(HYBRID_MARKER);
				}
			}

			setState(108);
			match(EPITHET);
			setState(109);
			authorship();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpeciesContext extends ParserRuleContext {
		public EpithetContext epithet() {
			return getRuleContext(EpithetContext.class,0);
		}
		public SpeciesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_species; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitSpecies(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpeciesContext species() throws RecognitionException {
		SpeciesContext _localctx = new SpeciesContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_species);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			epithet();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RankContext extends ParserRuleContext {
		public TerminalNode RANK() { return getToken(SciNameParser.RANK, 0); }
		public TerminalNode NOTHO() { return getToken(SciNameParser.NOTHO, 0); }
		public TerminalNode DOT() { return getToken(SciNameParser.DOT, 0); }
		public RankContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rank; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitRank(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RankContext rank() throws RecognitionException {
		RankContext _localctx = new RankContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_rank);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOTHO) {
				{
				setState(113);
				match(NOTHO);
				}
			}

			setState(116);
			match(RANK);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(117);
				match(DOT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubspeciesContext extends ParserRuleContext {
		public EpithetContext epithet() {
			return getRuleContext(EpithetContext.class,0);
		}
		public SubspeciesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subspecies; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitSubspecies(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubspeciesContext subspecies() throws RecognitionException {
		SubspeciesContext _localctx = new SubspeciesContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_subspecies);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			epithet();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InfraspeciesContext extends ParserRuleContext {
		public EpithetContext epithet() {
			return getRuleContext(EpithetContext.class,0);
		}
		public RankContext rank() {
			return getRuleContext(RankContext.class,0);
		}
		public InfraspeciesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infraspecies; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitInfraspecies(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfraspeciesContext infraspecies() throws RecognitionException {
		InfraspeciesContext _localctx = new InfraspeciesContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_infraspecies);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOTHO || _la==RANK) {
				{
				setState(122);
				rank();
				}
			}

			setState(125);
			epithet();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AuthorshipContext extends ParserRuleContext {
		public BasauthorshipContext basauthorship() {
			return getRuleContext(BasauthorshipContext.class,0);
		}
		public CombauthorshipContext combauthorship() {
			return getRuleContext(CombauthorshipContext.class,0);
		}
		public AuthorshipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_authorship; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitAuthorship(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AuthorshipContext authorship() throws RecognitionException {
		AuthorshipContext _localctx = new AuthorshipContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_authorship);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LR_BRACKET) {
				{
				setState(127);
				basauthorship();
				}
			}

			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AUTHOR) {
				{
				setState(130);
				combauthorship();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CombauthorshipContext extends ParserRuleContext {
		public AuthorteamContext authorteam() {
			return getRuleContext(AuthorteamContext.class,0);
		}
		public TerminalNode YEAR() { return getToken(SciNameParser.YEAR, 0); }
		public TerminalNode COMMA() { return getToken(SciNameParser.COMMA, 0); }
		public CombauthorshipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_combauthorship; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SciNameVisitor ) return ((SciNameVisitor<? extends T>)visitor).visitCombauthorship(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CombauthorshipContext combauthorship() throws RecognitionException {
		CombauthorshipContext _localctx = new CombauthorshipContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_combauthorship);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			authorteam();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==YEAR || _la==COMMA) {
				{
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(134);
					match(COMMA);
					}
				}

				setState(137);
				match(YEAR);
				}
			}
